--- a/deploy.yaml
+++ b/deploy.yaml
@@ -32,7 +32,7 @@ spec:
             mountPath: /secrets/cloudsql
             readOnly: true
       - name: gitea
-        image: gcr.io/core-769275/gitea:0.28
+        image: garybowers/gitea:1.11.4
         ports:
         - containerPort: 3000
           name: tcp-gitea
